--- a/css/mobile-first.css
+++ b/css/mobile-first.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
     transition: width 0.3s ease-in-out;
 }
 
@@ -11,12 +12,14 @@ menu{
     position: sticky;
     top: 0;
     box-shadow: 0 0 10px #0000007c;
+    width: 100%;
 }
 
 menu ul{
     list-style-type: none;
     background-color: #000000;
     overflow: hidden;
+    width: 100%;
 }
 
 menu ul li a{
@@ -76,4 +79,63 @@ header{
     33%{background-image: url(../imagens/header/la.jpg);}
     66%{background-image: url(../imagens/header/chicago.jpg);}
     99%{background-image: url(../imagens/header/ny.jpg);}
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
+.section-dad{
+    flex: 100%;
+    justify-content: center;
+    align-content: center;
+    padding: 13% 3%;
+}
+
+.container .band .art-band{
+    text-align: justify;
+}
+
+.container .band .art-band h2,h3{
+    font-size: 1.8em;
+    font-weight: normal;
+    text-align: center;
+    padding: 15px 0;
+}
+
+.container .band .art-band h3{
+    color: #808080;
+    font-size: 1.1em;
+    font-weight: normal;
+}
+
+.container .band .art-band p{
+    font-size: 1em;
+    line-height: 1.3em;
+    padding-bottom: 20px;
+}
+
+.container .band .art-band .image-section{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-content: center;
+    max-width: 80%;
+    margin: 30px auto;
+    background-color: orangered;
+}
+
+.band .art-band .image-section .container-img{
+    text-align: center;
+    width: 80%;
+    background-color: yellow;
+}
+
+.band .art-band .image-section .container-img .imgP{padding: 7px 7px 15px;}
+
+.band .art-band .image-section .container-img img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
 }
