--- a/css/desktop-tablet.css
+++ b/css/desktop-tablet.css
@@ -60,3 +60,17 @@ menu ul li.end span.material-icons:hover{
 header{
     min-height: 470px;
 }
+
+.section-dad{
+    padding: 6% 7%;
+}
+
+.container .band .art-band .image-section{
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+.container .band .art-band .image-section .container-img{
+    margin: 0;
+    max-width: 180px;
+}
