--- a/css/mobile-first.css
+++ b/css/mobile-first.css
@@ -94,6 +94,9 @@ header{
 }
 
 .container .band .art-band{
+    background-color: yellowgreen;
+    max-width: 800px;
+    margin: 0 auto;
     text-align: justify;
 }
 
